--- a/pyrecipes/recipes/templates/recipes/base.html
+++ b/pyrecipes/recipes/templates/recipes/base.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="{% static 'recipes/style.css' %}">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+    <script src="https://cdn.ckeditor.com/4.13.1/standard-all/ckeditor.js"></script>
 	{% block head %}{% endblock %}
 </head>
 <body>
@@ -33,5 +34,6 @@
 		{% endblock %}
 	</section>
 	<footer class="footer">{% block footer %}{% endblock %}</footer>
+	{% block post-scripts %}{% endblock %}
 </body>
 </html>
