--- a/pyrecipes/recipes/templates/recipes/base.html
+++ b/pyrecipes/recipes/templates/recipes/base.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>{% block title %}PyRecipes{% endblock %}</title>
 	<!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
