--- a/pyrecipes/recipes/templates/recipes/recipe_detail.html
+++ b/pyrecipes/recipes/templates/recipes/recipe_detail.html
@@ -11,6 +11,9 @@
 	<div class="col s12">
 	  <div class="card">
 	    <div class="card-content">
+	    	<a class="btn-flat waves-effect waves-light right" onclick="window.print();return false;">Print
+				<i class="material-icons right">print</i>
+	      	</a>
 	    	<span class="card-title">{{ object.title }}</span>
 	      	<p><em>By: {{ object.submitted_by }}</em></p><br>
 			<p><b>Ingredients:</b></p>
@@ -27,9 +30,6 @@
 	    <div class="card-action">
 	      	<a class="btn waves-effect waves-light" href="{% url 'recipes:edit' object.id %}">Edit
 				<i class="material-icons right">edit</i>
-	      	</a>
-	      	<a class="btn-flat waves-effect waves-light" onclick="window.print();return false;">Print
-				<i class="material-icons right">print</i>
 	      	</a>
 	      	<a href="{% url 'recipes:delete' object.id %}" class="btn waves-effect waves-light red right" type="submit" name="action">Delete
 			    <i class="material-icons right">delete</i>
