--- a/pyrecipes/recipes/templates/recipes/base.html
+++ b/pyrecipes/recipes/templates/recipes/base.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>{% block title %}PyRecipes{% endblock %}</title>
+	<title>{% block title %}Recipe Tracker{% endblock %}</title>
 	<!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
